# document-image-extractor-mcp

./: .dockerignore  .gitignore  ARCHITECTURE.md  AZURE_COMPARISON.md  AZURE_DEPLOYMENT.md  AZURE_QUICK_START.md  BASE64_ARCHITECTURE.md  BASE64_FEATURE_SUMMARY.md  BASE64_GUIDE.md  CODE_COMPARISON.md  CONVERSION_COMPLETE.md  COPILOT_MCP_GUIDE.md  Dockerfile  FILE_CHANGES.md  HTTP_SETUP.md  MIGRATION_SUMMARY.md  POWER_AUTOMATE_GUIDE.md  QUICKSTART_HTTP.md  README.md  REST_API_ARCHITECTURE.md  REST_API_SUMMARY.md  SETUP_COMPLETE.md  mcp-config-http.json  pyproject.toml  requirements.txt
deploy/: deploy-azure-app-service.ps1  deploy-azure-container-apps.ps1  github-actions-app-service.yml  github-actions-container-apps.yml
src/document_image_extractor_mcp/: __main__.py  server.py
tests/: README.md  run_all_tests.py  test-copilot-mcp.py  test-mcp-config.py  test-rest-api.ps1  test_base64_extraction.py  test_http_server.py  test_server.py  test_zip_mcp.py
