[project]
name = "document-image-extractor-mcp"
version = "0.1.0"
description = "MCP server for extracting images from PDF and Word documents with advanced features"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "mcp>=1.11.0",
 "pillow>=11.3.0",
 "pymupdf>=1.26.3",
]
[[project.authors]]
name = "CJ Duan"
email = "vompute@dulun.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
document-image-extractor-mcp = "document_image_extractor_mcp:main"
